# mcp-code-execution

./: .gitignore  AUDIT_SUMMARY.txt  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION.md  MARKETPLACE_CHECKLIST.md  README.md  STRUCTURE.md  USAGE.md  example_task.py  marketplace.json  package.json  plugin.json  pyproject.toml  setup.ts  setup_mcp.py  test-python-task.ts  test-task-executor.ts  tsconfig.json
.claude-plugin/: config.json  marketplace.json  plugin.json
.claude-plugin/agents/: taskExecutor.ts
.claude-plugin/commands/: createSkill.ts  setupMCP.ts
.claude-plugin/hooks/: onError.ts
.claude/commands/: generate-wrappers.md  generateWrappers.ts  list-skills.md  listSkills.ts  setup-mcp.md  validate-config.md
.github/: copilot-instructions.md
client/: python.py  retry.py  security.py  typescript.ts
plugin/: README.md
plugin/agents/: taskExecutor.ts
plugin/client/: monitoring.py  typescript.ts
plugin/commands/: validateConfig.ts
plugin/config/: mcp_config.json
plugin/examples/: example_task.py
plugin/hooks/: onTaskComplete.ts  onTaskStart.ts
plugin/servers/typescript/_discovery/: searchTools.ts
plugin/servers/typescript/github/: getIssues.ts  index.ts
plugin/skills/typescript/: README.md  convertIssuesToLeads.ts  exampleDataFilter.ts  filterLargeDataset.ts  saveSheetAsCsv.ts
refs/: ARCHITECTURE.md  PLUGIN_MIGRATION.md  README.md  anthropic-mcp-code-execution-reference.md  architecture-alignment-analysis.md  key-insights.md  migration-implementation-guide.md
skills/: __init__.py
skills/python/: example_data_filter.py
(+6 files in other folders)
